# hagrid

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3BAK  docker-compose.yml  full.sqlite3  manage.py  operations.md  pyproject.toml  requirements.txt
deployment/uberspace-ansible/: deploy.yml  hosts.example
deployment/uberspace-ansible/files/: generate_django_secret.j2  hagrid.ini.j2  localsettings.j2  uwsgi.j2
docker/: hagrid.dockerfile
hagrid/: __main__.py  prod_settings.py  settings.py  urls.py  wsgi.py
hagrid/api/: permissions.py  serializers.py  urls.py  views.py
hagrid/gallery/: admin.py  models.py  urls.py  views.py
hagrid/gallery/migrations/: 0001_initial.py  0002_auto_20190904_2149.py  0003_auto_20191226_2304.py  0004_galleryimage_alt_text_alter_galleryimage_id.py  0005_remove_galleryimage_variation_galleryimage_product_and_more.py  0006_alter_galleryimage_title.py
hagrid/gallery/templates/: gallery.html  gallery_disclaimer.html
hagrid/operations/: admin.py  models.py
hagrid/operations/migrations/: 0001_initial.py  0002_alter_openstatus_options.py  0003_remove_openstatus_open_openstatus_mode.py  0004_alter_openstatus_public_info.py
hagrid/operations/templates/: open_status.html
hagrid/products/: admin.py  context.py  models.py  pdf_code.py  tables.py  urls.py  views.py
hagrid/products/migrations/: 0001_initial_squashed_0004_auto_20190828_1153.py  0002_storesettings.py  0003_storesettings_dashboard_text.py  0004_auto_20191113_1926.py  0004_auto_20191113_1926_squashed_0007_auto_20191113_1937.py  0005_auto_20191113_1934.py  0005_auto_20191113_2221.py  0006_auto_20191113_1934.py  0006_remove_availabilityevent_user.py  0007_auto_20191113_1937.py  0007_auto_20191208_1325.py  0008_auto_20191225_2134.py  0009_storesettings_reservation_faq_text.py  0010_alter_product_id_alter_size_id_alter_sizegroup_id_and_more.py  0011_product_alter_variation_product.py  0012_productgroup_remove_product_previous_events_and_more.py  0013_variation_count_and_codes.py  0014_storesettings_counting_enabled.py  0015_variation_count_reserved_until.py  0016_variationcountaccesscode_as_queue.py  0017_variation_count_prio_bumped.py  0018_product_crate_size_variation_crate_size.py  0019_variation_count_disabled_reason_and_more.py  0020_variationcountaccesscode_name.py  0021_productgroup_offer_in_reservations.py  0023_alter_variation_availability_and_more.py  0023_infobeamersettings.py
hagrid/products/templates/: availabilityconfig.html  base.html  dashboard.html  dashboard_legend.html  dashboard_table.html  infobeamer.html  product_availability.html  product_table.html  productconfig.html  products_config_overview.html  variation_availability_box.html  variation_availability_config.html  variation_availability_event_list.html  variation_config.html  variation_config_box.html  variation_count.html  variation_count_config.html  variation_count_from_queue.html  variation_count_log.html  variation_count_overview.html  variation_count_queue.html  variation_table.html  variationavailabilityeventlist.html
hagrid/products/templatetags/: product.py
hagrid/products/views/: __init__.py  config.py  dashboard.py  stats.py  variation_count.py
hagrid/reservations/: admin.py  emails.py  export_csv.py  export_pdf.py  models.py  urls.py
hagrid/reservations/migrations/: 0001_initial_squashed_0009_auto_20190829_0926.py  0002_auto_20190829_1023.py  0003_reservation_comment.py  0004_auto_20191113_2301.py  0005_add_action_secret.py  (+4 more)
hagrid/static/: hagrid.scss
hagrid/staticpages/: admin.py  context.py  models.py  urls.py  views.py
scripts/: 37c3-availability-times.csv  data.py  history_graph.py
src/hagrid/: __main__.py  asgi.py  settings.py  urls.py
(+149 files in other folders)
