[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hagrid"
authors = [
    { name = "qbit", email = "qbit@ccc-p.org" },
]
description = "c3foc hagrid"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "none" }
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Babel==2.12.1",
    "django-positions==0.6.0",
    "Django==4.2.7",
    "django-filter==23.2",
    "djangorestframework==3.14.0",
    "isort==5.12.0",
    "Markdown==3.4.4",
    "Pillow==10.2.0",
    "pytz==2023.3",
    "sqlparse==0.4.4",
    "reportlab==4.0.4",
    "qrcode==7.4.2",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "hagrid.VERSION"}