[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hagrid"
authors = [
    { name = "qbit", email = "qbit@ccc-p.org" },
]
description = "c3foc hagrid"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "none" }
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Babel==2.16.0",
    "Django==5.1.9",
    "Markdown==3.4.4",
    "Pillow==11.0.0",
    "django-compressor==4.5.1",
    "django-filter==24.3",
    "django-libsass==0.9",
    "django-positions==0.6.0",
    "djangorestframework==3.15.2",
    "isort==5.12.0",
    "numpy==2.1.3",
    "pytz==2023.3",
    "qrcode==7.4.2",
    "reportlab==4.0.4",
    "sqlparse==0.5.0",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "hagrid.VERSION"}
