[project]
name = "hagrid"
description = "c3foc hagrid"
authors = [{ name = "qbit", email = "qbit@ccc-p.org" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "none" }
dynamic = ["version"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Babel==2.16.0",
    "django>=5.2",
    "Markdown==3.4.4",
    "Pillow==12.2.0",
    "cryptography>=48.0.0",
    "django-compressor==4.5.1",
    "django-csp>=4.0",
    "django-environ>=0.13.0",
    "django-filter==24.3",
    "django-libsass==0.9",
    "django-positions==0.6.0",
    "djangorestframework==3.15.2",
    "environ>=1.0",
    "isort==5.12.0",
    "numpy==2.1.3",
    "pytz==2023.3",
    "qrcode==7.4.2",
    "reportlab==4.0.4",
    "sqlparse==0.5.4",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=3.6,<7.0",
    "pytest-django>=4.5.2,<5",
    "django-webtest>=1.9.9,<2",
    "django-extensions>=3.2.1,<5.0.0",
    "pylint>=3.0.0,<5.0.0",
    "djhtml>=3.0.6,<4",
    "prek>=0.3.1",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"  # used if no VCS info is available, e.g. dependabot builds

[tool.uv]
# as per https://github.com/ninoseki/uv-dynamic-versioning/blob/main/docs/tips.md#build-caching-and-editable-installs
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true }}]

[tool.ruff]
line-length = 100
exclude = [
    "scripts",
]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
ignore = [
    "RUF012", # mutable default value for class attribute: common in django migrations
    "C408", # unneccassary call to dict(): we like to use dict() for readability in some cases
    "RUF059",  # unpacked variable is never used/prefix in underscore: we decided a full name is fine for unpacking
]
